# io_threads

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  codecov.yml
.github/workflows/: code_coverage.yml  linux.yml  windows.yml
include/io_threads/: concurrency_throttler.hpp  connection_throttler.hpp  cpu_id.hpp  data_chunk.hpp  dns_resolver.hpp  file_write_queue.hpp  file_writer.hpp  file_writer_config.hpp  file_writer_option.hpp  file_writer_thread.hpp  http_response_parser.hpp  network_interface.hpp  rotating_file_write_queue.hpp  socket_address.hpp  spin_lock.hpp  ssl_certificate.hpp  ssl_certificate_type.hpp  system_network_interfaces.hpp  tcp_client.hpp  tcp_client_address.hpp  tcp_client_config.hpp  tcp_client_thread.hpp  tcp_keep_alive.hpp  thread_config.hpp  throttling_queue.hpp  time.hpp  tls_client.hpp  tls_client_context.hpp  websocket_client_config.hpp  websocket_client_context.hpp  websocket_frame.hpp  websocket_frame_type.hpp  wss_client.hpp  wss_client_context.hpp  x509_store.hpp
src/: concurrency_throttler.cpp  connection_throttler.cpp  dns_resolver.cpp  file_writer_config.cpp  file_writer_thread.cpp  http_response_parser.cpp  memory_pool.cpp  network_interface.cpp  sec_websocket_accept.cpp  sec_websocket_key.cpp  shared_memory_pool.cpp  socket_address.cpp  tcp_client_thread.cpp  thread_config.cpp  throttling_queue.cpp  tls_client_context.cpp  tls_client_status.hpp  websocket_client_context.cpp  websocket_client_handshake_handler.cpp  websocket_client_handshake_response_parser.cpp  websocket_frame_mask.cpp  wss_client.cpp  wss_client_context.cpp  wss_client_context_impl.cpp  x509_store.cpp
src/common/: file_writer_command.hpp  logger.hpp  memory_pool.cpp  memory_pool.hpp  object_pool.hpp  sec_websocket_accept.cpp  sec_websocket_accept.hpp  sec_websocket_key.cpp  sec_websocket_key.hpp  shared_memory_pool.cpp  shared_memory_pool.hpp  tcp_client_command.hpp  tcp_deferred_task.hpp  thread_task.hpp  tls_client_status.hpp  utility.hpp  websocket_client_handshake_handler.cpp  websocket_client_handshake_handler.hpp  websocket_client_handshake_response_parser.cpp  websocket_client_handshake_response_parser.hpp  websocket_client_session.hpp  websocket_error.cpp  websocket_error.hpp  websocket_frame_mask.cpp  websocket_frame_mask.hpp  wss_client_context_impl.cpp  wss_client_context_impl.hpp
src/linux/: addrinfo_error.hpp  base64.hpp  dns_resolver_impl.hpp  file_descriptor.hpp  file_writer_thread_impl.hpp  file_writer_thread_worker.hpp  file_writer_uring.cpp  file_writer_uring.hpp  network_interface_impl.hpp  random_generator.hpp  socket_address_impl.hpp  tcp_client_thread_worker.hpp  tcp_client_uring.cpp  tcp_client_uring.hpp  tcp_socket_descriptor.hpp  tcp_socket_operation.hpp  tcp_socket_options.hpp  thread_affinity.hpp  tls_client_context_impl.hpp  uring_command_queue.hpp  uring_listener.hpp  uring_stop_token.hpp  uring_worker.hpp
src/openssl/: base64.hpp  error.cpp  error.hpp  sha1.hpp  tls_client_context_impl.hpp  tls_client_session.hpp  x509_store_impl.hpp
src/windows/: base64.hpp  completion_port.hpp  dns_resolver_impl.hpp  file_descriptor.hpp  file_writer_command.hpp  file_writer_thread_impl.hpp  file_writer_thread_worker.hpp  logger.hpp  network_interface_impl.hpp  object_pool.hpp  random_generator.hpp  sha1.hpp  socket_address_impl.hpp  tcp_client_command.hpp  tcp_client_thread_impl.hpp  tcp_client_thread_worker.hpp  tcp_connectivity_context.hpp  tcp_data_transfer_context.hpp  tcp_socket_descriptor.hpp  tls_client_context_impl.hpp  tls_client_session.hpp  wide_char.hpp  winapi_error.hpp  winsock_error.hpp  winsock_scope.hpp  x509_store_impl.hpp
tests/: CMakeLists.txt  concurrency_throttler.tests.cpp  connection_throttler.tests.cpp  file_write_queue.tests.cpp  file_writer.tests.cpp  file_writer_thread.tests.cpp  network_interface.tests.cpp  rotating_file_write_queue.tests.cpp  string_view_serializer.mock.hpp  tcp_client.tests.cpp  tcp_client_thread.tests.cpp  testsuite.cpp  testsuite.hpp  throttling_queue.tests.cpp  tls_client.tests.cpp  tls_client_context.tests.cpp  wss_client.tests.cpp
tests/tcp/: test_ssl_certificate.hpp  test_tcp_certificate.hpp  test_tcp_common.hpp  test_tcp_connect_timeout.hpp  test_tcp_server_context.cpp  test_tcp_server_context.hpp
tests/tcp/rest/: test_rest_client.hpp  test_rest_server.cpp  test_rest_server.hpp
tests/tcp/websocket/: test_websocket_client.hpp  test_websocket_server.cpp  test_websocket_server.hpp
